--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>Loco SaaS Starter</title>
+    <title>RTS Tracker</title>
   </head>
   <body>
     <div id="root"></div>
